review of 'concurrent-review' skill